# vsomeip_works

./: README.md
01_Client_Server_Simple_RequestResponse/: README.md  client_main.cpp  client_simple.hpp  server_main.cpp  server_simple.hpp  vsomeip.json
02_Server_client_comm_over_wifi/Client/: CMakeLists.txt  vsomeip.json
02_Server_client_comm_over_wifi/Server/: vsomeip.json
